docs: auth swagger完成 feat: 導入docker
